Adjust security config